@@ -18,7 +18,8 @@ import java.time.Duration;
 import java.util.List;
 import java.util.UUID;
 
-import static org.flickit.assessment.common.application.domain.assessment.AssessmentPermission.GET_ASSESSMENT_USERS;
+import static org.flickit.assessment.common.application.domain.assessment.AssessmentPermission.VIEW_ASSESSMENT_USER_LIST;
+import static org.flickit.assessment.common.error.ErrorMessageKey.COMMON_CURRENT_USER_NOT_ALLOWED;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
 
@@ -43,9 +44,10 @@ class GetAssessmentUsersServiceTest {
         UUID currentUserId = UUID.randomUUID();
         var param = new GetAssessmentUsersUseCase.Param(assessmentId, currentUserId, 10, 0);
 
-        when(assessmentPermissionChecker.isAuthorized(assessmentId, currentUserId, GET_ASSESSMENT_USERS)).thenReturn(false);
+        when(assessmentPermissionChecker.isAuthorized(assessmentId, currentUserId, VIEW_ASSESSMENT_USER_LIST)).thenReturn(false);
 
-        assertThrows(AccessDeniedException.class, () -> service.getAssessmentUsers(param));
+        var throwable = assertThrows(AccessDeniedException.class, () -> service.getAssessmentUsers(param));
+        assertEquals(COMMON_CURRENT_USER_NOT_ALLOWED, throwable.getMessage());
     }
 
     @ParameterizedTest
@@ -64,7 +66,8 @@ class GetAssessmentUsersServiceTest {
             "admin@flickit.org",
             "Flickit Admin",
             picturePath,
-            manager);
+            manager,
+            true);
 
         PaginatedResponse<LoadAssessmentUsersPort.AssessmentUser> paginatedResponse =
             new PaginatedResponse<>(List.of(expectedAssessmentUser),
@@ -74,7 +77,7 @@ class GetAssessmentUsersServiceTest {
                 "asc",
                 10);
 
-        when(assessmentPermissionChecker.isAuthorized(assessmentId, currentUserId, GET_ASSESSMENT_USERS)).thenReturn(true);
+        when(assessmentPermissionChecker.isAuthorized(assessmentId, currentUserId, VIEW_ASSESSMENT_USER_LIST)).thenReturn(true);
         when(port.loadAssessmentUsers(portParam)).thenReturn(paginatedResponse);
 
         var response = service.getAssessmentUsers(useCaseParam);
@@ -82,13 +85,14 @@ class GetAssessmentUsersServiceTest {
         assertNotNull(response);
         assertFalse(response.getItems().isEmpty());
         assertEquals(1, response.getItems().size());
-        GetAssessmentUsersUseCase.AssessmentUser actualAssessmentUser = response.getItems().get(0);
+        GetAssessmentUsersUseCase.AssessmentUser actualAssessmentUser = response.getItems().getFirst();
         assertEquals(expectedAssessmentUser.id(), actualAssessmentUser.id());
         assertEquals(expectedAssessmentUser.email(), actualAssessmentUser.email());
         assertEquals(expectedAssessmentUser.displayName(), actualAssessmentUser.displayName());
         assertNull(actualAssessmentUser.pictureLink());
         assertEquals(expectedAssessmentUser.role().id(), actualAssessmentUser.role().id());
         assertEquals(expectedAssessmentUser.role().title(), actualAssessmentUser.role().title());
+        assertEquals(expectedAssessmentUser.editable(), actualAssessmentUser.editable());
     }
 
     @Test
@@ -108,7 +112,8 @@ class GetAssessmentUsersServiceTest {
                 "admin@flickit.org",
                 "Flickit Admin",
                 "path/to/picture",
-                manager);
+                manager,
+                true);
 
         PaginatedResponse<LoadAssessmentUsersPort.AssessmentUser> paginatedResponse =
             new PaginatedResponse<>(List.of(expectedAssessmentUser),
@@ -118,7 +123,7 @@ class GetAssessmentUsersServiceTest {
                 "asc",
                 10);
 
-        when(assessmentPermissionChecker.isAuthorized(assessmentId, currentUserId, GET_ASSESSMENT_USERS)).thenReturn(true);
+        when(assessmentPermissionChecker.isAuthorized(assessmentId, currentUserId, VIEW_ASSESSMENT_USER_LIST)).thenReturn(true);
         when(port.loadAssessmentUsers(portParam)).thenReturn(paginatedResponse);
         when(createFileDownloadLinkPort.createDownloadLink(expectedAssessmentUser.picturePath(), Duration.ofDays(1))).thenReturn("cdn.flickit.org/profile.jpg");
 
@@ -127,7 +132,7 @@ class GetAssessmentUsersServiceTest {
         assertNotNull(response);
         assertFalse(response.getItems().isEmpty());
         assertEquals(1, response.getItems().size());
-        GetAssessmentUsersUseCase.AssessmentUser actualAssessmentUser = response.getItems().get(0);
+        GetAssessmentUsersUseCase.AssessmentUser actualAssessmentUser = response.getItems().getFirst();
         assertEquals(expectedAssessmentUser.id(), actualAssessmentUser.id());
         assertEquals(expectedAssessmentUser.email(), actualAssessmentUser.email());
         assertEquals(expectedAssessmentUser.displayName(), actualAssessmentUser.displayName());
@@ -135,6 +140,6 @@ class GetAssessmentUsersServiceTest {
         assertEquals("cdn.flickit.org/profile.jpg", actualAssessmentUser.pictureLink());
         assertEquals(expectedAssessmentUser.role().id(), actualAssessmentUser.role().id());
         assertEquals(expectedAssessmentUser.role().title(), actualAssessmentUser.role().title());
+        assertEquals(expectedAssessmentUser.editable(), actualAssessmentUser.editable());
     }
-
 }
