@@ -6,6 +6,7 @@ import org.flickit.assessment.kit.application.domain.AnswerOptionImpact;
 import org.flickit.assessment.kit.application.domain.ExpertGroup;
 import org.flickit.assessment.kit.application.domain.Question;
 import org.flickit.assessment.kit.application.port.in.attribute.GetKitAttributeLevelQuestionsDetailUseCase;
+import org.flickit.assessment.kit.application.port.out.assessmentkit.LoadActiveKitVersionIdPort;
 import org.flickit.assessment.kit.application.port.out.expertgroup.LoadKitExpertGroupPort;
 import org.flickit.assessment.kit.application.port.out.expertgroupaccess.CheckExpertGroupAccessPort;
 import org.flickit.assessment.kit.application.port.out.question.LoadAttributeLevelQuestionsPort;
@@ -31,7 +32,7 @@ import static org.mockito.Mockito.when;
 class GetKitAttributeLevelQuestionsDetailServiceTest {
 
     @InjectMocks
-    private GetKitKitAttributeLevelQuestionsDetailService service;
+    private GetKitAttributeLevelQuestionsDetailService service;
 
     @Mock
     private CheckExpertGroupAccessPort checkExpertGroupAccessPort;
@@ -41,6 +42,9 @@ class GetKitAttributeLevelQuestionsDetailServiceTest {
 
     @Mock
     private LoadAttributeLevelQuestionsPort loadAttributeLevelQuestionsPort;
+
+    @Mock
+    private LoadActiveKitVersionIdPort loadActiveKitVersionIdPort;
 
     @Test
     void testGetKitAttributeLevelQuestionsDetail_CurrentUserIsNotMemberOfKitExpertGroup_ThrowsException() {
@@ -63,6 +67,7 @@ class GetKitAttributeLevelQuestionsDetailServiceTest {
     void testGetKitAttributeLevelQuestionsDetail_AttributeWithGivenAttributeIdAndKitIdDoesNotExist_ThrowsException() {
         long kitId = 123L;
         long attributeId = 223L;
+        long kitVersionId = 345L;
         long maturityLevel = 333L;
         UUID currentUserId = UUID.randomUUID();
 
@@ -70,8 +75,9 @@ class GetKitAttributeLevelQuestionsDetailServiceTest {
 
         when(loadKitExpertGroupPort.loadKitExpertGroup(kitId)).thenReturn(expertGroup);
         when(checkExpertGroupAccessPort.checkIsMember(expertGroup.getId(), currentUserId)).thenReturn(true);
-        when(loadAttributeLevelQuestionsPort.loadAttributeLevelQuestions(kitId, attributeId, maturityLevel))
+        when(loadAttributeLevelQuestionsPort.loadAttributeLevelQuestions(kitVersionId, attributeId, maturityLevel))
             .thenThrow(new ResourceNotFoundException(ATTRIBUTE_ID_NOT_FOUND));
+        when(loadActiveKitVersionIdPort.loadKitVersionId(kitId)).thenReturn(kitVersionId);
 
         var param = new GetKitAttributeLevelQuestionsDetailUseCase.Param(
             kitId,
@@ -86,6 +92,7 @@ class GetKitAttributeLevelQuestionsDetailServiceTest {
     @Test
     void testGetKitAttributeLevelQuestionsDetail_MaturityLevelWithGivenMaturityLevelIdAndKitIdDoesNotExist_ThrowsException() {
         long kitId = 123L;
+        long kitVersionId = 345L;
         long attributeId = 223L;
         long maturityLevel = 333L;
         UUID currentUserId = UUID.randomUUID();
@@ -94,8 +101,9 @@ class GetKitAttributeLevelQuestionsDetailServiceTest {
 
         when(loadKitExpertGroupPort.loadKitExpertGroup(kitId)).thenReturn(expertGroup);
         when(checkExpertGroupAccessPort.checkIsMember(expertGroup.getId(), currentUserId)).thenReturn(true);
-        when(loadAttributeLevelQuestionsPort.loadAttributeLevelQuestions(kitId, attributeId, maturityLevel))
+        when(loadAttributeLevelQuestionsPort.loadAttributeLevelQuestions(kitVersionId, attributeId, maturityLevel))
             .thenThrow(new ResourceNotFoundException(MATURITY_LEVEL_ID_NOT_FOUND));
+        when(loadActiveKitVersionIdPort.loadKitVersionId(kitId)).thenReturn(kitVersionId);
 
         var param = new GetKitAttributeLevelQuestionsDetailUseCase.Param(
             kitId,
@@ -109,6 +117,7 @@ class GetKitAttributeLevelQuestionsDetailServiceTest {
     @Test
     void testGetKitAttributeLevelQuestionsDetail_ValidInput_ValidResult() {
         long kitId = 123L;
+        long kitVersionId = 223L;
         var expertGroup = ExpertGroupMother.createExpertGroup();
         var attr1 = AttributeMother.attributeWithTitle("attr1");
         var attr2 = AttributeMother.attributeWithTitle("attr2");
@@ -142,14 +151,16 @@ class GetKitAttributeLevelQuestionsDetailServiceTest {
         var portResult = List.of(new LoadAttributeLevelQuestionsPort.Result(question1, QuestionnaireMother.questionnaireWithTitle("title")),
             new LoadAttributeLevelQuestionsPort.Result(question2, QuestionnaireMother.questionnaireWithTitle("title")));
 
-        when(loadAttributeLevelQuestionsPort.loadAttributeLevelQuestions(kitId, attr1.getId(), maturityLevel2.getId()))
+        when(loadAttributeLevelQuestionsPort.loadAttributeLevelQuestions(kitVersionId, attr1.getId(), maturityLevel2.getId()))
             .thenReturn(portResult);
+        when(loadActiveKitVersionIdPort.loadKitVersionId(kitId)).thenReturn(kitVersionId);
+
 
         var result = service.getKitAttributeLevelQuestionsDetail(param);
 
         assertNotNull(result);
         assertEquals(2, result.questionsCount());
-        var resultQuestion1 = result.questions().get(0);
+        var resultQuestion1 = result.questions().getFirst();
         assertNotNull(resultQuestion1);
         assertEquals(question1.getTitle(), resultQuestion1.title());
         assertEquals(question1.getIndex(), resultQuestion1.index());
@@ -157,17 +168,17 @@ class GetKitAttributeLevelQuestionsDetailServiceTest {
         assertTrue(resultQuestion1.advisable());
         assertEquals(impact1.getWeight(), resultQuestion1.weight());
         assertEquals("title", resultQuestion1.questionnaire());
-        var question1AnswerOption = resultQuestion1.answerOptions().get(0);
+        var question1AnswerOption = resultQuestion1.answerOptions().getFirst();
         assertNotNull(question1AnswerOption);
         assertEquals(question1.getOptions().size(), resultQuestion1.answerOptions().size());
-        assertEquals(question1.getOptions().get(0).getTitle(), question1AnswerOption.title());
-        assertEquals(question1.getOptions().get(0).getIndex(), question1AnswerOption.index());
-        assertEquals(impact1.getOptionImpacts().get(0).getValue(), question1AnswerOption.value());
+        assertEquals(question1.getOptions().getFirst().getTitle(), question1AnswerOption.title());
+        assertEquals(question1.getOptions().getFirst().getIndex(), question1AnswerOption.index());
+        assertEquals(impact1.getOptionImpacts().getFirst().getValue(), question1AnswerOption.value());
     }
 
     private static List<AnswerOptionImpact> buildAnswerOptionImpacts(Question question) {
         return List.of(
-            createAnswerOptionImpact(question.getOptions().get(0).getId(), 0),
+            createAnswerOptionImpact(question.getOptions().getFirst().getId(), 0),
             createAnswerOptionImpact(question.getOptions().get(1).getId(), 0.5),
             createAnswerOptionImpact(question.getOptions().get(2).getId(), 1)
         );
