@@ -37,11 +37,12 @@ class GetSpaceListServiceTest {
         UUID currentUserId = UUID.randomUUID();
         var space1 = SpaceMother.createSpace(currentUserId);
         var space2 = SpaceMother.createSpace(UUID.randomUUID());
+        String ownerName = "sample name";
         var spacePortList = List.of(
-            new LoadSpaceListPort.Result(space1, 2, 5),
-            new Result(space2, 4, 3));
+            new LoadSpaceListPort.Result(space1, ownerName, 2, 5),
+            new LoadSpaceListPort.Result(space2, ownerName, 4, 3));
 
-        PaginatedResponse<Result> paginatedResponse = new PaginatedResponse<>(
+        PaginatedResponse<LoadSpaceListPort.Result> paginatedResponse = new PaginatedResponse<>(
             spacePortList,
             page,
             size,
@@ -57,16 +58,20 @@ class GetSpaceListServiceTest {
         assertNotNull(paginatedResponse);
         assertNotNull(result.getItems());
         assertEquals(2, result.getItems().size());
-        assertEquals(spacePortList.get(0).space().getId(), result.getItems().get(0).id());
-        assertEquals(spacePortList.get(0).space().getTitle(), result.getItems().get(0).title());
-        assertTrue(result.getItems().get(0).isOwner());
-        assertEquals(spacePortList.get(0).space().getLastModificationTime(), result.getItems().get(0).lastModificationTime());
-        assertEquals(spacePortList.get(0).assessmentsCount(), result.getItems().get(0).assessmentsCount());
-        assertEquals(spacePortList.get(0).membersCount(), result.getItems().get(0).membersCount());
+        assertEquals(spacePortList.getFirst().space().getId(), result.getItems().getFirst().id());
+        assertEquals(spacePortList.getFirst().space().getTitle(), result.getItems().getFirst().title());
+        assertEquals(space1.getOwnerId(), result.getItems().getFirst().owner().id());
+        assertEquals(ownerName, result.getItems().getFirst().owner().displayName());
+        assertTrue(result.getItems().getFirst().owner().isCurrentUserOwner());
+        assertEquals(spacePortList.getFirst().space().getLastModificationTime(), result.getItems().getFirst().lastModificationTime());
+        assertEquals(spacePortList.getFirst().assessmentsCount(), result.getItems().getFirst().assessmentsCount());
+        assertEquals(spacePortList.getFirst().membersCount(), result.getItems().getFirst().membersCount());
 
         assertEquals(spacePortList.get(1).space().getId(), result.getItems().get(1).id());
         assertEquals(spacePortList.get(1).space().getTitle(), result.getItems().get(1).title());
-        assertFalse(result.getItems().get(1).isOwner());
+        assertEquals(space2.getOwnerId(), result.getItems().get(1).owner().id());
+        assertEquals(ownerName, result.getItems().get(1).owner().displayName());
+        assertFalse(result.getItems().get(1).owner().isCurrentUserOwner());
         assertEquals(spacePortList.get(1).space().getLastModificationTime(), result.getItems().get(1).lastModificationTime());
         assertEquals(spacePortList.get(1).assessmentsCount(), result.getItems().get(1).assessmentsCount());
         assertEquals(spacePortList.get(1).membersCount(), result.getItems().get(1).membersCount());
